# GLFMX

./: README.md
code/kylin/: file_compat.h  glfm.h  glfm_platform_android.c  glfm_platform_ios.m  main.c
code/kylin/java/com/kylin/: PlayerActivity.java
player/android/app/: AndroidManifest.xml  CMakeLists.txt
player/ios/kylin/: Info.plist
player/ios/kylin.xcodeproj/: project.pbxproj
